fix: reduce tooltip spacing

--- a/src/styles/plugins/floating-vue.scss
+++ b/src/styles/plugins/floating-vue.scss
@@ -16,7 +16,7 @@ div {
 
     .v-popper__inner {
       background-color: var(--color-background);
-      padding: var(--padding, #{1.5rem 1.5rem});
+      padding: var(--padding, #{0.8rem 1rem});
       border: none;
       border-radius: 3px;
       max-width: 100%;
